--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "@angular/platform-browser-dynamic": "^14.1.0",
     "@angular/router": "^14.1.0",
     "@popperjs/core": "^2.11.6",
-    "bootstrap": "^5.2.2",
+    "angular-material": "^1.2.5",
+    "bootstrap": "^5.2.3",
     "jquery": "^3.6.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
