--- a/angular.json
+++ b/angular.json
@@ -75,7 +75,8 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "ProyectoAngular:build:production"
+              "browserTarget": "ProyectoAngular:build:production",
+              "proxyConfig": "proxy.conf.json"
             },
             "development": {
               "browserTarget": "ProyectoAngular:build:development"
